[gd_scene load_steps=8 format=3 uid="uid://5e31nn3jjdar"]

[ext_resource type="Script" path="res://scripts/survivors_game.gd" id="1_5unbe"]
[ext_resource type="Texture2D" uid="uid://bjkv1bjbrg0xm" path="res://art_assets/Rock029_1K-PNG_Color.png" id="2_a3fgk"]
[ext_resource type="PackedScene" uid="uid://h3lgnjss35av" path="res://scenes/player.tscn" id="3_inog1"]
[ext_resource type="PackedScene" uid="uid://bi402pqmnjkx5" path="res://scenes/JarTree.tscn" id="4_pvdt8"]
[ext_resource type="Script" path="res://scripts/Kill count.gd" id="5_noymc"]
[ext_resource type="Script" path="res://scripts/GameManger.gd" id="6_w8an7"]

[sub_resource type="Curve2D" id="Curve2D_6pqlb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -39, -47, 0, 0, 0, 0, -37, -47, 0, 0, 0, 0, 1973, -46, 0, 0, 0, 0, 1973, 1181, 0, 0, 0, 0, -45, 1178, 0, 0, 0, 0, -43, -47)
}
point_count = 6

[node name="Survivors Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_5unbe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 1955.0
offset_bottom = 1129.0
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 55.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a3fgk")

[node name="PlayerOne" parent="." instance=ExtResource("3_inog1")]
position = Vector2(945, 555)

[node name="Path2D" type="Path2D" parent="PlayerOne"]
position = Vector2(-945, -555)
curve = SubResource("Curve2D_6pqlb")

[node name="PathFollow2D" type="PathFollow2D" parent="PlayerOne/Path2D"]
unique_name_in_owner = true
position = Vector2(951.99, -46.508)
rotation = 0.000497512
progress = 990.99

[node name="replay" type="Button" parent="PlayerOne"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 548.0
offset_top = -535.0
offset_right = 847.0
offset_bottom = -403.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "Replay"
flat = true

[node name="quit" type="Button" parent="PlayerOne"]
offset_left = 853.0
offset_top = -536.0
offset_right = 966.0
offset_bottom = -486.0
theme_override_font_sizes/font_size = 30
text = "Quit"
flat = true

[node name="Trees" type="Node" parent="."]

[node name="Tree" parent="Trees" instance=ExtResource("4_pvdt8")]
position = Vector2(500, 795)

[node name="Tree2" parent="Trees" instance=ExtResource("4_pvdt8")]
position = Vector2(370, 451)

[node name="Tree3" parent="Trees" instance=ExtResource("4_pvdt8")]
position = Vector2(1191, 874)

[node name="Tree4" parent="Trees" instance=ExtResource("4_pvdt8")]
position = Vector2(1277, 282)

[node name="Tree5" parent="Trees" instance=ExtResource("4_pvdt8")]
position = Vector2(794, 213)

[node name="Tree6" parent="Trees" instance=ExtResource("4_pvdt8")]
position = Vector2(1663, 789)

[node name="Tree7" parent="Trees" instance=ExtResource("4_pvdt8")]
position = Vector2(727, 266)

[node name="Tree8" parent="Trees" instance=ExtResource("4_pvdt8")]
position = Vector2(826, 272)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Kills" type="CanvasLayer" parent="."]

[node name="Kill count" type="Label" parent="Kills"]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 262.0
offset_right = 147.0
offset_bottom = 305.0
theme_override_colors/font_color = Color(0.992157, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Kills: 0"
script = ExtResource("5_noymc")

[node name="Panel" type="Panel" parent="Kills"]
visible = false
light_mask = 0
offset_left = 152.0
offset_top = 129.0
offset_right = 282.0
offset_bottom = 169.0

[node name="GameManger" type="Node" parent="."]
script = ExtResource("6_w8an7")

[connection signal="health_gone" from="PlayerOne" to="." method="_on_player_one_health_gone"]
[connection signal="pressed" from="PlayerOne/replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="PlayerOne/replay" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PlayerOne/quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
